@@ -49,6 +49,8 @@ Changelog for NICOS 2
 
   - Removed first ("converter") argument from parameter type "oneof".
 
+  - Added a "FinishExperiment()" user command.
+
   - Added "poll" and "neverpoll" parameters to the Poller object.
 
   - When calling "stop()" without devices, stop all devices in parallel.
